--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,8 +1,3 @@
-.header  {
-  font-family: monospace;
-  background: papayawhip;
-}
-
 .logo {
   font-size: 48px;
   font-weight: 900;
@@ -14,12 +9,38 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 10px;
+  padding: 0px;
 }
 
 a {
   font-size: 22px;
   background: white;
   padding: 8px;
+  margin: 10px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.header  {
+  font-family: monospace;
+  background: papayawhip;
+  display: flex;
+  margin: 20px;
+  align-items: center;
+  
+}
+
+.header .logo {
+  margin: 10px auto;
+}
+
+.right-links ul {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.left-links ul {
+  display: flex;
+  justify-content: space-evenly;
 }
