--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -7,10 +7,38 @@ img {
   height: 100px;
 }
 
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+}
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin: 32px;
 }
+
+.objects {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.obj {
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  margin: 0px 52px;
+}
+
+
+
+
+
+
+
+
 
 /* do not edit this footer */
 .footer {
