--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,38 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.header {
+  font-weight: bold;
+}
+
+.modal {
+  display: flex;
+}
+
+.icon { 
+  flex-shrink: 0;
+  margin: 10px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+  height: 45px;
+}
+
+.header {
+  font-size: 18px;
+}
+
+.close-button {
+  margin: 0px 10px 0px auto;
+}
+
+.text {
+  margin: 10px 20px 10px 0px;
+}
+
+.buttons-container {
+  margin: 15px auto 15px 0px;
+}
