--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -24,4 +26,49 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+}
+
+li {
+  display: inline;
+  margin: 8px;
+}
+
+.header {
+  display: flex;
+  margin-top: 10px;
+}
+
+.header a, .footer a {
+  color: darkgrey;
+  padding: 5px;
+}
+
+
+.left-links {
+  margin-right: auto;
+}
+
+.footer {
+  display: flex;
+  background-color: rgba(211, 211, 211, 0.349);
+  margin-top: auto;
+  padding: 15px 5px;
+}
+
+
+.content {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
